--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 version: 3
-endpoint: http://localhost:8080
+endpoint: https://next-mudfish-55.hasura.app
 metadata_directory: metadata
 actions:
   kind: synchronous
