--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 Copy the following YAML contents into the github-actions-demo.yml file:
 
 YAML
-name: GitHub Actions Demo
+name: demo
 on: [push]
 jobs:
   Explore-GitHub-Actions:
