--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -2,8 +2,6 @@ name: 'hasura-cloud-preview'
 on:
   pull_request:
     types: [open, reopen, synchronize]
-    paths:
-    	- hasura # path to the Hasura project directory in the repo
     branches:
       - main
 
@@ -14,11 +12,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hasura/hasura-cloud-preview-apps@v0.0.2
         with:
-          name: "project-name-pr-${{github.event.number}}" # name of the preview app to created
+          name: 'project-name-pr-${{github.event.number}}' # name of the preview app to created
           hasuraProjectDirectoryPath: hasura # path to the Hasura project directory in the repo
           hasuraEnv: | # env vars exposed to the Hasura instance
-           	HASURA_GRAPHQL_CORS_DOMAINS=http://my-site.com
-           	PG_DATABASE_URL=${{secrets.PG_STRING}}
+
           postgresDBConfig: |
             POSTGRES_SERVER_CONNECTION_URI=${{secrets.PG_STRING}}
             PG_ENV_VARS_FOR_HASURA=PG_DB_URL_1,PG_DB_URL_2
