--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -15,11 +15,11 @@ jobs:
           name: 'project-name-pr-${{github.event.number}}' # name of the preview app to created
           hasuraProjectDirectoryPath: hasura # path to the Hasura project directory in the repo
           hasuraEnv: | # env vars exposed to the Hasura instance
-
+            PG_DATABASE_URL=${{secrets.PG_STRING}}
           postgresDBConfig: |
             POSTGRES_SERVER_CONNECTION_URI=${{secrets.PG_STRING}}
             PG_ENV_VARS_FOR_HASURA=PG_DB_URL_1,PG_DB_URL_2
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}} # ${{ secrets.GITHUB_TOKEN }} is provided by default by GitHub actions
           HASURA_CLOUD_ACCESS_TOKEN: ${{secrets.HASURA_CLOUD_ACCESS_TOKEN}} # Hasura Cloud access token to contact Hasura Cloud APIs
-          CLOUD_DATA_GRAPHQL_ENDPOINT: 'http://tenant1.nginx.hasura.me/v1/graphql'
+          CLOUD_DATA_GRAPHQL_ENDPOINT: 'https://perfect-cobra-37.hasura.app/v1/graphql'
