--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -11,19 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Debug
-        uses: hmarr/debug-action@v2
       - uses: hasura/hasura-cloud-preview-apps@v0.0.2
         with:
           name: 'preview-app-${{github.event.number}}'
-          hasuraCloudGraphQLEndpoint: 'https://data.pro.arusah.com/v1/graphql'
+          hasuraCloudGraphQLEndpoint: 'https://perfect-cobra-37.hasura.app/v1/graphql'
           hasuraProjectDirectoryPath: hasura
           region: 'ap-south-1'
           hasuraEnv: |
             HASURA_GRAPHQL_CORS_DOMAIN=*
-          postgresDBConfig: |
-            POSTGRES_SERVER_CONNECTION_URI=${{secrets.PG_STRING}}
-            PG_ENV_VARS_FOR_HASURA=PG_DATABASE_URL
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           HASURA_CLOUD_ACCESS_TOKEN: ${{secrets.HASURA_CLOUD_ACCESS_TOKEN}}
