--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -19,8 +19,8 @@ jobs:
           region: 'ap-south-1'
           hasuraEnv: |
             HASURA_GRAPHQL_CORS_DOMAIN=*
+            HASURA_GRAPHQL_ADMIN_SECRET=EvWrgJdVwtzBf93zC0snXWytEdGQLVBK9RpVnwLeCIco7euydoZyxdxCmeyiLy72
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           HASURA_CLOUD_ACCESS_TOKEN: ${{secrets.HASURA_CLOUD_ACCESS_TOKEN}}
           ACTIONS_RUNNER_DEBUG: true
-          HASURA_GRAPHQL_ADMIN_SECRET: EvWrgJdVwtzBf93zC0snXWytEdGQLVBK9RpVnwLeCIco7euydoZyxdxCmeyiLy72
