--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -23,4 +23,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           HASURA_CLOUD_ACCESS_TOKEN: ${{secrets.HASURA_CLOUD_ACCESS_TOKEN}}
+          HASURA_CLOUD_PAT: ${{secrets.HASURA_CLOUD_ACCESS_TOKEN}}
           ACTIONS_RUNNER_DEBUG: true
