add admin secret in env

--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -25,3 +25,4 @@ jobs:
           HASURA_CLOUD_ACCESS_TOKEN: ${{secrets.HASURA_CLOUD_ACCESS_TOKEN}}
           HASURA_CLOUD_PAT: ${{secrets.HASURA_CLOUD_ACCESS_TOKEN}}
           ACTIONS_RUNNER_DEBUG: true
+          HASURA_GRAPHQL_ADMIN_SECRET: ${{secrets.ADMIN_SECRET}}
