Add free tier region

--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           name: 'preview-app-${{github.event.number}}'
           hasuraProjectDirectoryPath: hasura
+          region: 'us-west-1'
           hasuraEnv: |
             HASURA_GRAPHQL_CORS_DOMAIN=*
             HASURA_GRAPHQL_ADMIN_SECRET=${{secrets.ADMIN_SECRET}}
