--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: hasura/hasura-cloud-preview-apps@v0.0.2
+      - uses: hasura/hasura-cloud-preview-apps@support-preview-app-scheduling
         with:
           name: 'preview-app-${{github.event.number}}'
           hasuraProjectDirectoryPath: hasura
