--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -20,6 +20,7 @@ jobs:
           hasuraEnv: |
             HASURA_GRAPHQL_CORS_DOMAIN=*
             HASURA_GRAPHQL_ADMIN_SECRET=${{secrets.ADMIN_SECRET}}
+            PG_ENV_VARS_FOR_HASURA=PG_DATABASE_URL
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           HASURA_CLOUD_ACCESS_TOKEN: ${{secrets.HASURA_CLOUD_ACCESS_TOKEN}}
