--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -20,7 +20,7 @@ jobs:
           hasuraEnv: |
             HASURA_GRAPHQL_CORS_DOMAIN=*
             HASURA_GRAPHQL_ADMIN_SECRET=${{secrets.ADMIN_SECRET}}
-            PG_DATABASE_URL=${{secrets.PG_STRING}}
+            PG_DATABASE_URL1=${{secrets.PG_STRING}}
           postgresDBConfig: |
             POSTGRES_SERVER_CONNECTION_URI=${{secrets.PG_STRING}}
             PG_ENV_VARS_FOR_HASURA=PG_DB_URL_1,PG_DB_URL_2
